# test-ci-project

./: .env  CMakeLists.txt  README.md  build-in-docker.sh  build.sh
.azure/pipelines/: build-and-test.yml
.github/workflows/: build-and-test.yml
cmake/: configure_options.cmake  turn_on_warnings.cmake
lib/: fetch_googletest.sh
src/: CMakeLists.txt
src/foo/: foo.cc  foo.h
src/foo/bar/: bar.cc  bar.h
tests/: CMakeLists.txt  main.cc
tests/unit/: CMakeLists.txt  main.cc
tests/unit/foo/: foo_test.cc
tests/unit/foo/bar/: bar_test.cc
